# root-signals-mcp

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  root_types.py  settings.py  specification.md
.github/workflows/: build-container.yml  test.yml  unit-tests.yml
demonstrations/: example_pydantic-ai.py
examples/: run_sse_server.py  sse_client_example.py
references/: mcp-server-implementation.md  rootsignals-sdk-async.md
src/: __init__.py
src/root_mcp_server/: __init__.py  client.py  core.py  evaluator.py  root_api_client.py  schema.py  server.py  settings.py  sse_server.py  tools.py  unified_server.py
src/root_mcp_server/test/: conftest.py  test_client.py  test_evaluator.py  test_root_client.py  test_settings.py  test_sse_integration.py  test_sse_server.py
src/root_mcp_server/tests/: __init__.py  conftest.py  test_evaluator.py  test_integration.py  test_mcp_server.py  test_sse_integration.py
src/root_signals_mcp/: __init__.py  client.py  core.py  evaluator.py  fastmcp_adapter.py  judge.py  root_api_client.py  schema.py  settings.py  sse_server.py  stdio_server.py  tools.py
src/root_signals_mcp/test/: conftest.py  test_client.py  test_evaluator.py  test_judge.py  test_root_client.py  test_settings.py  test_sse_integration.py  test_sse_server.py  test_stdio_integration.py
